--- a/css/style-dark.css
+++ b/css/style-dark.css
@@ -2646,6 +2646,97 @@ blockquote:before,
 			transition: all .7s ease-in-out;
 }
 
+/*----------------------------------
+		12.1 Preloader 2
+----------------------------------*/
+
+.preload {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #1d1e21;
+	z-index: 9999; }
+
+.loading-text {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+	text-align: center;
+	width: 100%;
+	height: 100px;
+	line-height: 100px; }
+	.loading-text span {
+		display: inline-block;
+		position: relative;
+		overflow: hidden;
+		color: #000;
+		font-size: 22px; }
+		.loading-text span:before {
+		content: attr(data-preloader);
+		position: absolute;
+		top: 0;
+		left: 0;
+		color: #e1e1e1;
+		-webkit-animation-duration: 3s;
+		animation-duration: 3s;
+		-webkit-animation-iteration-count: infinite;
+		animation-iteration-count: infinite;
+		-webkit-animation-fill-mode: backwards;
+		animation-fill-mode: backwards;
+		-webkit-animation-name: preload-animation;
+		animation-name: preload-animation; }
+		.loading-text span:nth-child(2):before {
+		-webkit-animation-delay: 0.2s;
+		animation-delay: 0.2s; }
+		.loading-text span:nth-child(3):before {
+		-webkit-animation-delay: 0.4s;
+		animation-delay: 0.4s; }
+		.loading-text span:nth-child(4):before {
+		-webkit-animation-delay: 0.6s;
+		animation-delay: 0.6s; }
+		.loading-text span:nth-child(5):before {
+		-webkit-animation-delay: 0.8s;
+		animation-delay: 0.8s; }
+		.loading-text span:nth-child(6):before {
+		-webkit-animation-delay: 1s;
+		animation-delay: 1s; }
+		.loading-text span:nth-child(7):before {
+		-webkit-animation-delay: 1.2s;
+		animation-delay: 1.2s; }
+	  
+@-webkit-keyframes preload-animation {
+	0%, 100% {
+		-webkit-transform: rotateY(-90deg) scale(1);
+		transform: rotateY(-90deg) scale(1);
+		opacity: 0; }
+	20%, 50% {
+		-webkit-transform: rotateY(0) scale(1);
+		transform: rotateY(0) scale(1);
+		opacity: 1; }
+	75% {
+		-webkit-transform: rotateY(0) scale(1.2);
+		transform: rotateY(0) scale(1.2);
+		opacity: 0; } }
+	
+	@keyframes preload-animation {
+	0%, 100% {
+		-webkit-transform: rotateY(-90deg) scale(1);
+		transform: rotateY(-90deg) scale(1);
+		opacity: 0; }
+	20%, 50% {
+		-webkit-transform: rotateY(0) scale(1);
+		transform: rotateY(0) scale(1);
+		opacity: 1; }
+	75% {
+		-webkit-transform: rotateY(0) scale(1.2);
+		transform: rotateY(0) scale(1.2);
+		opacity: 0; } }
+
 /* ---------------------------------
 		13. Tooltip Css
 --------------------------------- */
